# scraper-api

./: .gitignore  README.md  pyproject.toml
.github/workflows/: backend.yml
services/backend/: .env.development  .pre-commit-config.yaml  Dockerfile  README.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.local.yml  serverless.yml
services/backend/resources/: cognito.yml  dynamodb.yml
services/backend/src/: common.py  config.py  create_dynamodb_locally.py  dependencies.py  main.py  security.py
services/backend/src/auth/: routes.py  schema.py
services/backend/src/aws/: cognito.py
services/backend/src/common/: http_client.py  schema.py
services/backend/src/health/: routes.py
services/backend/src/job/: model.py  routes.py  schema.py  store.py  util.py
services/backend/src/linkedin/: parser.py  routes.py  scraper.py
services/backend/src/user/: routes.py  schema.py
services/backend/tests/: conftest.py  test_health.py  test_job.py  test_user.py
services/frontend/: package-lock.json  package.json
