[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["markomiric <marko_miric@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.6"}
mangum = "^0.19.0"
boto3 = "^1.35.76"
pydantic-settings = "^2.6.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pip = "^24.3.1"
joserfc = "^1.0.1"
aiohttp = "^3.11.11"
bs4 = "^0.0.2"
langchain-openai = "^0.3.0"
langchain-core = "^0.3.34"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
ruff = "^0.8.2"
moto = "^5.0.22"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
